fix button alignment

--- a/src/components/QuizUI/index.css
+++ b/src/components/QuizUI/index.css
@@ -21,13 +21,13 @@ Overriding the style when generating screenshots
       [full-width-end] !important;
   }
 }
-
+/* screenshot-mode mobile-shot */
 .screenshot-mode {
 
   .quiz-hint-toggle {
-    grid-template-columns: 1fr 7rem;
+    grid-template-columns: 1fr 7rem !important;
     .watermark {
-      display: grid;
+      display: grid !important;
     }
   }
   .score {
@@ -307,6 +307,8 @@ Overriding the style when generating screenshots
 
     .toggle-explainer {
       max-width: 7rem;
+      max-height: 2rem;
+      align-self: flex-end;
     }
     .watermark {
       /* 
